tests/ui/invalid_repr.stderr
error: invalid repr, expected one of:
           i8, i16, i32, i64, i128, isize,
           u8, u16, u32, u64, u128, usize
 --> tests/ui/invalid_repr.rs:3:8
  |
3 | #[repr(align(1))]
  |        ^^^^^^^^
